--- a/xblocks_contrib/poll/static/css/poll.css
+++ b/xblocks_contrib/poll/static/css/poll.css
@@ -1,9 +1,9 @@
 /* CSS for PollBlock */
 
-.poll_xblock .count {
+.poll .count {
     font-weight: bold;
 }
 
-.poll_xblock p {
+.poll p {
     cursor: pointer;
 }
