--- a/xblocks_contrib/word_cloud/static/css/word_cloud.css
+++ b/xblocks_contrib/word_cloud/static/css/word_cloud.css
@@ -3,9 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700");
 
 .input-cloud {
-    /*TODO: revert following*/
-    /*margin: calc((var(--baseline) / 4));*/
-    margin: 5px;
+    margin: calc((var(--baseline, 20px) / 4));
 }
 
 .result_cloud_section {
