--- a/xblocks_contrib/word_cloud/templates/word_cloud.html
+++ b/xblocks_contrib/word_cloud/templates/word_cloud.html
@@ -2,7 +2,8 @@
 
 <div
     id="word_cloud_{{ element_id }}"
-    class="word_cloud_block">
+    class="word_cloud_block"
+    data-ajax-url="{{ ajax_url }}">
     {% if display_name %}
         <h3 class="hd hd-3" id="word_cloud_{{ element_id }}_heading">{{ display_name }}</h3>
     {% endif %}
