--- a/xblocks_contrib/annotatable/templates/annotatable.html
+++ b/xblocks_contrib/annotatable/templates/annotatable.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<div class="annotatable-wrapper" id="annotatable_{{ id }}">
+<div class="annotatable-wrapper" id="annotatable_{{ element_id }}">
     <div class="annotatable-header">
         {% if display_name %}<h3 class="hd hd-3 annotatable-title">{{ display_name }}</h3>{% endif %}
     </div>
