--- a/xblocks_contrib/poll/templates/poll.html
+++ b/xblocks_contrib/poll/templates/poll.html
@@ -1,7 +1,9 @@
-{% load i18n %}
-
-<div class="poll">
-<p>
-    PollBlock: {% trans "count is now" %} <span class='count'>{{ count }}</span> {% trans "click me to increment." %}
-</p>
+<div
+    id="poll_{{ element_id }}"
+    class="{{ element_class }}"
+    data-ajax-url="{{ ajax_url }}"
+>
+    <!-- Hidden field to read configuration JSON from. -->
+    <div class="{{ element_class }}_div" id="{{ element_id }}_json"
+         style="display: none;">{{ configuration_json }}</div>
 </div>
