--- a/xblocks_contrib/video/templates/video.html
+++ b/xblocks_contrib/video/templates/video.html
@@ -1,5 +1,3 @@
-<!-- NOTE: Code has been copied from the following source file
-https://github.com/openedx/edx-platform/blob/master/lms/templates/video.html -->
 {% load i18n %}
 
 {% if display_name is not None and not is_embed %}
@@ -16,7 +14,8 @@ https://github.com/openedx/edx-platform/blob/master/lms/templates/video.html -->
     data-block-id='{{ block_id|escape }}'
     data-course-id='{{ course_id|escape }}'
     tabindex="-1"
->
+    data-package-name="xblocks-contrib"
+    data-test-id="1">
     <div class="focus_grabber first"></div>
 
     <div class="tc-wrapper">
