chore: Address change requests

--- a/xblocks_contrib/video/templates/video.html
+++ b/xblocks_contrib/video/templates/video.html
@@ -14,8 +14,7 @@
     data-block-id='{{ block_id|escape }}'
     data-course-id='{{ course_id|escape }}'
     tabindex="-1"
-    data-package-name="xblocks-contrib"
-    data-test-id="1">
+    data-package-name="xblocks-contrib">
     <div class="focus_grabber first"></div>
 
     <div class="tc-wrapper">
